gccida/c0/output_init_element
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_init_element/src/c-typeck.c:6694:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *unfillpos; // [rsp+8h] [rbp-38h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_init_element/src/c-typeck.c:6695:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *bitpos; // [rsp+10h] [rbp-30h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_init_element/src/c-typeck.c:6697:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *valueb; // [rsp+38h] [rbp-8h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_init_element/src/c-typeck.c:6747:29: error: expected expression
if ( valueb == ( tree_node *)global_trees ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_init_element/src/c-typeck.c:6747:18: error: use of undeclared identifier 'tree_node'
if ( valueb == ( tree_node *)global_trees ) 
                 ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_init_element/src/obj/c-typeck.o] Error 1
